Fix styling notes
* move tagline Write once. Use many. Creative
  laziness encouraged. (<h3>) subtitle directly
  under The simplest way to model APIs (<h2>)
* delete the whole #content-bg-color <section> dark
  blue block
* playground: use that dark blue color as background
  of playground (background-color: #526881)
* playground: remove “Playground” title from playground,
  including space
* playground: adapt the contrast of the syntax coloring
  & highlighting, all seems to work as-is except string
  value which is too dark (e.g. “Hello World” line 2)
  and highlighting which should now be lighter. use the
  same color scale for both except lighter versions
  of the same colors
* playground: make background color of “Try it out”
  button match color of playground comments text color

--- a/css/style.scss
+++ b/css/style.scss
@@ -595,13 +595,14 @@ header{
     }
   }
   a.playground-btn{
+    z-index: 1;
     position: absolute;
     right: 15px;
     top: 11px;
     border: 0px;
     border-radius: 2px;
     padding:10px 20px;
-    background-color: $slate-gray;
+    background-color: #9EAAB7;
     color: $white;
     font-family: 'Roboto-Regular';
     font-size: $font-face-small; 
@@ -620,10 +621,6 @@ header{
   .editor-block{
     box-shadow: 1px 0px 3px #808080;
     .monaco-editor{
-      .monaco-editor-hover{
-        background-color: $lighter-gray !important;
-        border-color: $bluish !important;
-      }
       .selected-line-editor-decoration{
         background-color: $bluish;
         width: 7px !important;
